refactor: split libraries and apis from executable app